# littleTank

./: .gitignore  AGENTS.md  CAST_BREAK_RULES_HANDOFF.md  DATA_CONFIG_SPEC.md  DEVELOPMENT_HANDOFF.md  ENEMY_DATA_INTERFACE_ADDENDUM_2026-04-16.md  ENEMY_DATA_INTERFACE_SPEC.md  GAME_DESIGN_DOC.md  MANUAL_SKILL_CONTROL_HANDOFF.md  PLAYER_BUILD_DATA_INTERFACE_SPEC.md  PLAYER_BUILD_INTERFACE_ADDENDUM_2026-04-16.md  PLAYER_BUILD_MANUAL_CONTROL_NOTES.md  README.md  STAGE_AND_ENCOUNTER_TUNING_GUIDE.md  STAGE_DATA_INTERFACE_SPEC.md  UI_WIREFRAME_SPEC.md  index.html  package-lock.json  package.json  关卡设计入口.md  开发更新日志.md  怪物设计入口.md  战士T技能天赋设计入口.md  第一章自动评分.md  第二章自动评分.md
docs/: combat-stats-settlement-dev.md  player-tank-class-expansion-handoff.md  stage-map-data-boundaries.md  zulaman-chapter3-dev.md
docs/balance/: difficulty-scoring-system.md  manual-difficulty-baselines.md  ringingdeeps-balance-report.md
public/backup/: challenge_stage_content.xlsx  encounter_balance.xlsx  enemy_data.xlsx  manual_playtest_builds.xlsx  (+2 more)
scripts/: addBearTPlayerBuild.mjs  analyzeBalance.mjs  analyzeDelta.mjs  analyzeStrategyTips.mjs  buildDesktopDataPack.mjs  buildDesktopDataPack.smoke.mjs  createStandaloneDemoHtml.mjs  generateChallengeWorkbook.mjs  generateChallengeWorkbook.test.ts  generateDesignerWorkbooks.mjs  ts-extension-loader.mjs  validateDesignerData.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/desktop-data/: game-data.ltpkg  manifest.json
src-tauri/src/: data_pack.rs  generated_data_pack.rs  main.rs
(+256 files in other folders)
